--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,19 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    restart: unless-stopped
+    depends_on:
+      - db
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-password}
+    ports:
+      - 8081:80
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+
   app:
     build: .
     ports:
@@ -26,5 +39,7 @@ services:
 
 volumes:
   db:
+    driver: local
+  pgadmin:
     driver: local
 
