--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,14 @@
 services:
+  mailpit:
+    image: axllent/mailpit:latest
+    restart: unless-stopped
+    volumes:
+      - mailpit:/data
+    ports:
+      - 1025:1025
+      - 8025:8025
+    environment:
+      MP_DATABASE: /data/mailpit.db
   db:
     image: postgres:latest
     restart: unless-stopped
@@ -41,5 +51,7 @@ volumes:
   db:
     driver: local
   pgadmin:
+    driver: local
+  mailpit:
     driver: local
 
